@@ -1,3 +1,10 @@
+2001-05-24  Dave Peticolas  <dave@krondo.com>
+
+	* src/gnome/new-user-funs.c (gnc_ui_show_new_user_choice_window):
+	jump to new user quickstart help when appropriate
+
+	* src/gnc-ui.h: add new help file
+
 2001-05-25  Robert Graham Merkel  <rgmerk@mira.net>
 
 	* src/scm/html-utilities.scm: display report title
